@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.5.6
 -------------
 * Bugfix: Gryphon feet are no longer referred to as talons.
+* Bugfix: Fixed some bugged output in some of Gwendy's new scenes.
 
 --------------------------------------------
              PREVIOUS VERSIONS
